# peloton_server

./: .gitignore  Dockerfile  README.md  clean.py  docker-compose.yml  go.mod  pyproject.toml  seed_db.py
app/: database.py  main.py  requirements.txt
app/api/: __init__.py
app/api/endpoints/: authorization.py
app/routers/: __init__.py  authorization.py
app/schemas/: __init__.py  authorization.py
internal/: main.go
scripts/: clean.py  seed_db.py
