[tool.poetry]
name = "peloton_server"
version = "0.1.0"
description = ""
authors = ["bsphair <bsphair@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
mysql-connector-python = "^8.0.22"
pydantic = "^1.7.3"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
